index.css
:root {
    --orbit-sun-radius: 700px;
    --orbit-moon-radius: 500px;
    --sun-radius: 48px;
    --moon-radius: 24px;
}

/* Rotating orbiting circle */
.orbit-container {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: -1;

    &.orbit-container-up {
        clip-path: inset(0 0 50% 0);
    }

    &.orbit-container-down {
        clip-path: inset(50% 0 0 0);
    }
}

.orbit {
    position: absolute;

    &.orbit-sun {
        width: var(--orbit-sun-radius);
        height: var(--orbit-sun-radius);
        top: calc(50% - var(--orbit-sun-radius) / 2);
        left: calc(50% - var(--orbit-sun-radius) / 2);
        animation: orbit-rotate 60s linear infinite;
    }

    &.orbit-moon {
        width: var(--orbit-moon-radius);
        height: var(--orbit-moon-radius);
        top: calc(50% - var(--orbit-moon-radius) / 2);
        left: calc(50% - var(--orbit-moon-radius) / 2);
        animation: orbit-rotate 20s linear infinite;
    }
}

.circle {
    border-radius: 50%;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);

    &.circle-sun {
        width: var(--sun-radius);
        height: var(--sun-radius);
        top: 0;

        &.circle-sun-up {
            background: rgb(244, 230, 45);
            box-shadow: 0 0 50px rgb(244, 230, 45);
        }

        &.circle-sun-down {
            border: 1px solid #616372;
        }
    }

    &.circle-moon {
        width: var(--moon-radius);
        height: var(--moon-radius);
        bottom: 0;

        &.circle-moon-up {
            background: #f3f3f3;
            box-shadow: 0 0 30px rgba(252, 252, 252, 0.7);
        }

        &.circle-moon-down {
            border: 1px solid #616372;
        }
    }
}

@keyframes orbit-rotate {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

body {
    min-height: 100vh;
    margin: 0;
    display: grid;
    place-items: center;
    grid-template-areas: "main";
    color: #332a2a;
    font-family: 'Fira Mono', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace;
}

@keyframes fadeInAnimation {
    0% {
        transform: rotate(0) scale(0);
    }

    25% {
        transform: rotate(5deg) scale(1.1);
    }

    75% {
        transform: rotate(-5deg);
    }

    100% {
        transform: rotate(0) scale(1);
    }
}

a {
    color: #4eaaff;
    text-decoration: none;
    font-weight: bold;
    transition: color 0.2s, transform 0.2s;
}

a:hover {
    color: #333b91;
    transform: scale(1.1);
    text-decoration: underline;
}

.content {
    background: rgb(255, 255, 255);
    padding: 2rem 3rem;
    border-radius: 1rem;
    box-shadow: 0 5px 24px rgb(0, 0, 0);
    text-align: center;
    max-width: 600px;
    grid-area: main;

    animation: fadeInAnimation 0.5s linear;
}

.horizon {
    grid-area: main;
    width: 100%;
}

.links {
    display: flex;
    flex-direction: row;
    gap: 20px;
}

@media (prefers-color-scheme: dark) {
    body {
        background: #181a1b;
        color: #f3f3f3;
    }

    .content {
        background: rgb(52, 55, 58);
        box-shadow: 0 4px 24px rgba(0, 0, 0, 0.8);
    }

    a {
        color: #7ecbff;
    }

    a:hover {
        color: #a3b8ff;
    }
}

